Readme updated and some files removed.

--- a/fase-1/Diabetes_Prediction.ipynb
+++ b/fase-1/Diabetes_Prediction.ipynb
@@ -32,6 +32,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!mkdir -p ~/.kaggle\n",
+        "!mv kaggle.json ~/.kaggle/\n",
+        "!kaggle datasets download -d iammustafatz/diabetes-prediction-dataset\n",
+        "!unzip -q diabetes-prediction-dataset.zip -d ."
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
       "outputs": [],
