Added and edited comments.

--- a/fase-1/Diabetes_Prediction.ipynb
+++ b/fase-1/Diabetes_Prediction.ipynb
@@ -36,6 +36,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Descargar datos desde kaggle\n",
         "!mkdir -p ~/.kaggle\n",
         "!mv kaggle.json ~/.kaggle/\n",
         "!kaggle datasets download -d iammustafatz/diabetes-prediction-dataset\n",
@@ -185,7 +186,7 @@
       ],
       "source": [
         "# Cargar los datos\n",
-        "data = pd.read_csv(\"../diabetes_prediction_dataset.csv\")\n",
+        "data = pd.read_csv(\"diabetes_prediction_dataset.csv\")\n",
         "data = data[:100000]\n",
         "data.head()"
       ]
@@ -233,7 +234,7 @@
         }
       ],
       "source": [
-        "# Verificar los tipos de datos\n",
+        "# Verificar los tipos de datos y nulos\n",
         "data.info()"
       ]
     },
